# coursework5

Job_Parser_DB-develop/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
Job_Parser_DB-develop/data_storage/: data_storage_abc.py  data_storage_hh.py
Job_Parser_DB-develop/database/: db_interaction_abc.py  db_manager.py  db_saver.py  queries.sql  tables_creation.sql  tables_remove.sql
Job_Parser_DB-develop/entity/: employer_hh.py  entity_abc.py  vacancy_hh.py
Job_Parser_DB-develop/logs/: readme.txt
Job_Parser_DB-develop/mixins/: user_interaction.py
Job_Parser_DB-develop/user_interface/: class_user_interface.py
